# MeuRebanho-Embedded

./: README.md
meuRabanho-gateway/: README.md  platformio.ini
meuRabanho-gateway/src/: main.cpp
meuRabanho-node/: README.md
meuRabanho-node/lib/: LoRa-RP2040.h
meuRabanho-node/src/: CMakeLists.txt  main.cpp
